Closed
Bug 1289916
Opened 9 years ago
Closed 9 years ago
Don't trigger a tree traversal in ProcessPendingRestyles if the tree isn't dirty
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla50
Tracking | Status | |
---|---|---|
firefox50 | --- | fixed |
People
(Reporter: bholley, Assigned: bholley)
References
Details
Attachments
(1 file)
1.27 KB,
patch
|
emilio
:
review+
|
Details | Diff | Splinter Review |
This is causing assertion failures with the new machinery. I've got a patch.
Assignee | ||
Comment 1•9 years ago
|
||
It's possible (and in fact, desirable) for the restyle hints to all evaluate
to 0, which means the tree stays clean even though the map was non-empty.
Attachment #8775322 -
Flags: review?(ealvarez)
Comment 2•9 years ago
|
||
Comment on attachment 8775322 [details] [diff] [review]
Check tree dirtiness in ProcessPendingRestyles before triggering traversal. v1
Review of attachment 8775322 [details] [diff] [review]:
-----------------------------------------------------------------
Hmmm... Indeed, good catch.
Attachment #8775322 -
Flags: review?(ealvarez) → review+
Pushed by bholley@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f8669df3b3de
Check tree dirtiness in ProcessPendingRestyles before triggering traversal. r=emilio
Comment 4•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Assignee | ||
Updated•9 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•