Bug 1289916 - Check tree dirtiness in ProcessPendingRestyles before triggering traversal. r=emilio

It's possible (and in fact, desirable) for the restyle hints to all evaluate
to 0, which means the tree stays clean even though the map was non-empty.